# rusty-comms

./: .gitignore  AGENTS.md  ASYNC_SHM_ENHANCEMENT.md  CHANGELOG.md  CODE_REVIEW.md  COMPREHENSIVE_REVIEW_PR93.md  CONFIG.md  CONTRIBUTING.md  Cargo.toml  DASHBOARD.md  Dockerfile  FINAL_CODE_REVIEW_PR93.md  HOST_CONTAINER_IPC_SETUP.md  HOST_TO_CONTAINER_SYNTAX_EXAMPLES.txt  METHODOLOGY_CHANGE.md  PERFORMANCE_OPTIMIZATIONS.md  PODMAN_SETUP.md  README.md  README_HOST_TO_CONTAINER.md  REVIEW_SUMMARY.md  SETUP_INSTRUCTIONS.txt  SHM_ANALYSIS.md  SHM_COMPARISON.md  TEST_REPORT.md  a  audit.toml  benchmark_streaming_output.csv  commit_message.txt  create_uds_server.sh  dashboard.py  docker-compose.uds.yml  parameter_examples.sh  parse_results.py  podman-compose.custom.yml  podman-compose.uds.yml  requirements.txt  run_container_server.sh  run_container_to_container_tests.py  run_host_client.sh  run_host_container.sh  (+12 more)
.cargo/: audit.toml  config.toml
.cursor/plans/: blocking-mode-implementation-plan.md
.githooks/: pre-commit
.github/: pull_request_template.md
.github/scripts/: check_pr_coverage.py
.github/workflows/: ci.yml  command-dispatch.yml  rebase.yml  stale-pr-notifier.yml
docs/: CHANGELOG.md  DOCUMENTATION_AUDIT.md  HOST_CONTAINER_USAGE.md  PODMAN_SETUP.md  PR_RESOURCE_LEAKS_DEADLOCKS.md  QUICK_REFERENCE.md  README.md  USER_GUIDE.md  container-to-container_ipc_65f6eea2.plan.md  host-container-ipc-implementation-plan.md
docs-asciidoc/: README.adoc
docs-myst/: Makefile  README.md  conf.py  index.md  requirements.txt
docs-site/: README.md  intro-example.md  sidebars-example.js
docs/archive/: blocking-mode-implementation-plan.md
docs/concepts/: README.md  async-vs-blocking.md  latency-measurement.md  shared-memory-options.md
docs/reference/: README.md  cli-reference.md  environment-variables.md  json-schema.md
docs/tutorials/: README.md  comparing-ipc-mechanisms.md  cross-process-testing.md  dashboard-analysis.md
docs/user-guide/: README.md  advanced-usage.md  basic-usage.md  getting-started.md  ipc-mechanisms.md  output-formats.md  performance-tuning.md  troubleshooting.md
examples/: blocking_basic.rs  blocking_comparison.rs
output/: lat_40000_8192_stream.csv  lat_stream.csv  lat_stream8196.csv  s
scripts/: install-git-hooks.sh  msrv-check.sh
src/: automotive_metrics.rs  benchmark.rs  benchmark_blocking.rs  cli.rs  container.rs  coordination.rs  execution_mode.rs  host_container.rs  lib.rs  logging.rs  main.rs  metrics.rs  results.rs  results_blocking.rs  standalone_client.rs  standalone_server.rs  utils.rs
src/ipc/: mod.rs  posix_message_queue.rs  posix_message_queue_blocking.rs  shared_memory.rs  shared_memory_blocking.rs  shared_memory_direct.rs  tcp_socket.rs  tcp_socket_blocking.rs  unix_domain_socket.rs  unix_domain_socket_blocking.rs
tests/: integration_blocking_advanced.rs  integration_blocking_pmq.rs  integration_blocking_shm.rs  integration_blocking_shm_direct.rs  integration_blocking_tcp.rs  integration_blocking_uds.rs  integration_container_to_container.rs  integration_host_container.rs  integration_pmq_round_trip.rs  integration_server_handshake.rs  integration_shm_round_trip.rs  integration_standalone.rs  integration_tcp_round_trip.rs
utils/: README.md  comprehensive-rusty-comms-testing.py  fullrun.py  generate_summary_csv.py
utils/dashboard/: README.md  cache.py  dashboard.py  dashboard_styles.css  data_processor.py  requirements.txt
