[package]
name = "ipc-benchmark"
version = "0.1.0"
edition = "2021"
# MSRV is set to 1.70 to maintain compatibility with the Rust toolset in RHEL 9.
rust-version = "1.70"
authors = ["IPC Benchmark Contributors"]
description = "A comprehensive interprocess communication benchmark suite"
license = "Apache-2.0"
repository = "https://github.com/your-org/ipc-benchmark"
documentation = "https://docs.rs/ipc-benchmark"
readme = "README.md"
keywords = ["ipc", "benchmark", "performance", "concurrency"]
categories = ["development-tools::profiling", "concurrency"]

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["mqueue"] }

[dependencies]
anyhow = "1.0.86"
colored = "2.1.0"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = ">=4.4.18, <4.5.0", features = ["derive"] }
crossbeam = "0.8"
shared_memory = "0.12"
nix = { version = "0.29" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.17", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.17"
rand = "0.8"
statistics = "0.4"
hdrhistogram = "7.5"
bincode = "1.3"
async-trait = "0.1"
socket2 = "0.5"
tracing-appender = "0.2.3"
time = ">=0.3.34, <0.3.36" # Pinned to a compatible range for MSRV 1.70
parking_lot = "0.12.4"
thiserror = "2.0.16"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.20"

[[bin]]
name = "ipc-benchmark"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
