[package]
name = "ipc-benchmark"
version = "0.1.0"
edition = "2021"
# MSRV is set to 1.70 to maintain compatibility with the Rust toolset in RHEL 9.
rust-version = "1.70"
authors = ["IPC Benchmark Contributors"]
description = "A comprehensive interprocess communication benchmark suite"
license = "Apache-2.0"
repository = "https://github.com/your-org/ipc-benchmark"
documentation = "https://docs.rs/ipc-benchmark"
readme = "README.md"
keywords = ["ipc", "benchmark", "performance", "concurrency"]
categories = ["development-tools::profiling", "concurrency"]

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["mqueue"] }

[dependencies]
anyhow = "1.0.86"
colored = "2.1.0"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = ">=4.4.18, <4.5.0", features = ["derive"] }
crossbeam = "0.8"
shared_memory = "0.12"
libc = "0.2"
nix = { version = "0.29", features = ["time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# MSRV: uuid 1.21+ requires Rust 1.85+
uuid = { version = ">=1.17, <1.21", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.17"
rand = "0.8"
statistics = "0.4"
hdrhistogram = "7.5"
bincode = "1.3"
async-trait = "0.1"
socket2 = "0.5"
tracing-appender = "0.2.3"
time = ">=0.3.34, <0.3.36" # Pinned to a compatible range for MSRV 1.70
parking_lot_core = "=0.9.11"
# MSRV: pin to a version that depends on parking_lot_core compatible with Rust 1.70
parking_lot = "=0.12.3"
lock_api = "=0.4.13"
# MSRV: transitive pins to avoid newer MSRV bumps
half = "=2.2.1"
rayon = "=1.7.0"
rayon-core = "=1.12.1"
thiserror = "2.0.16"
tokio-macros = "=2.5.0"  # tokio-macros 2.6.0+ requires Rust 1.71+
mio = "=1.0.4"  # mio 1.1.0+ requires Rust 1.71+
core_affinity = "0.8.3"
# MSRV: ctrlc 3.5+ uses zeroed() in statics (requires Rust 1.75+)
ctrlc = "=3.4.5"
os_pipe = "1.1.5"
# MSRV: zmij 1.0.20+ requires Rust 1.71+
zmij = "=1.0.19"
# MSRV: proc-macro ecosystem pins — 1.0.45/2.0.115+/1.0.23+
# all bumped MSRV to Rust 1.71+
quote = "=1.0.44"
syn = "=2.0.114"
unicode-ident = "=1.0.22"

[dev-dependencies]
criterion = "0.5"
# MSRV: tempfile 3.25+ depends on getrandom >=0.3,<0.5 which resolves
# to 0.4.x (edition 2024, unparseable by Rust 1.70's cargo)
tempfile = ">=3.20, <3.25"

[[bin]]
name = "ipc-benchmark"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
